[workspace]
members = [
  "./crates/bokeh-rs",
  "./crates/bokehjs-build",
  "./crates/bokehjs-lib",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3 (https://opensource.org/license/bsd-3-clause/)"
repository = "https://github.com/bokeh/bokehrs"

[workspace.dependencies]
bokeh-rs = {path = "./crates/bokeh-rs/", version = "*"}
bokehjs-build = {path = "./crates/bokehjs-build/", version = "*"}
bokehjs-lib = {path = "./crates/bokehjs-lib/", version = "*"}

[profile.release]
lto = true
