[package]
name = "bokeh-rs"
description = "Bokeh for Rust"
version = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
repository = {workspace = true}

[dependencies]
tokio = {version = "1.0", features = ["full"]}
warp = {version = "0.3"}
yew = {version = "0.20"}
#polars = {version = "0.28.0", features = ["strings", "lazy"]}

[dev-dependencies]
approx = {version = "0.5.1"}
