[package]
name = "bokehjs-lib"
description = "Math library for BokehJS"
version = {workspace = true}
edition = {workspace = true}
license = {workspace = true}
repository = {workspace = true}

[lib]
crate-type = ["lib"]

[dependencies]
static_aabb2d_index = {version = "1.0.0"}

[dev-dependencies]
approx = {version = "0.5.1"}
